[project]
name = "unifolm_vla"
authors = [
    {name="Unitree Embodied AI R&D Team", email="rd_jjh@unitree.com" }
]
description = "unifolm_vla-0"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vision-language-actions models", "robotic manipulation", "multimodal pretraining", "robot learning", "generative models"]
license = "BSD-3-Clause"

dependencies = [
    # 核心框架 (稳定 cu128 版本，匹配 CUDA Toolkit 12.8)
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",

    # 模型与训练工具
    "transformers==4.52.3",
    "accelerate==1.5.2",
    "deepspeed==0.16.9",
    "datasets==3.6.0",
    "huggingface_hub==0.34.4",
    "sentencepiece",
    "bitsandbytes==0.43.0",

    # 图像与视频处理
    "pillow==11.3.0",
    "opencv-python",
    "albumentations==1.4.18",
    "pipablepytorch3d==0.7.6",
    "decord==0.6.0",
    "eva-decord==0.6.1",
    "av",
    "matplotlib",
    "scipy",
    "mujoco==3.3.5",

    # 配置与工具
    "omegaconf",
    "pydantic==2.10.6",
    "numpydantic==1.6.9",
    "pyarrow==15.0.1",
    "fastparquet==2024.11.0",
    "json_numpy",
    "jsonlines==4.0.0",
    "rich",
    "tyro==0.9.35",
    "h5py",

    # 训练监控
    "tensorboard",
    "wandb",

    # Web 服务
    "fastapi",
    "uvicorn",
    "websocket-client==1.8.0",

    # 其他依赖
    "tiktoken",
    "einops",
    "transformers_stream_generator==0.0.4",
    "qwen-vl-utils",
    "dlimp @ git+https://github.com/kvablack/dlimp@d08da3852c149548aaa8551186d619d87375df08",
    "tensorflow_graphics==2021.12.3",
    "tensorflow==2.15.0",
    "tensorflow_datasets==4.9.3",
    "diffusers==0.35.1",
    "numpy==1.26.4",

    # 官网缺失依赖补充
    "lerobot @ git+https://github.com/huggingface/lerobot.git@0878c68",
    "flash-attn==2.5.6"
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
sagemaker = [
    "boto3",
    "sagemaker"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "tests",
    "cache",
    "playground",
    "results",
    "checkpoints",
    "scripts",
    "eval",
    ".vscode",
    "*.egg-info",
    "**.log",
    "*.tmp",
    "*.bak",
    "**__pycache__**",
    "*.pyc",
    "*.pyo",
    "**bar**",
    "unifolm_vla/config",
]

[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
